[package]
name = "friendly-vector-format"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-lsp = "0.17.0"
tokio = { version = "1.21.2", features = ["full"] }
tree-sitter = "0.20.9"
eframe = "0.19.0"

[build-dependencies]
cc="*"
